buildscript {  //쿼리DSL 추가
	ext {
		queryDslVersion="5.0.0"
	}
}

plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '2.7.17'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	//쿼리DSL 추가
	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
}

group = 'com.dev'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '11'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-validation'//유효성 검증
	implementation "org.apache.tomcat.embed:tomcat-embed-jasper"
	implementation "jakarta.servlet:jakarta.servlet-api"
	implementation "jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api"
	implementation "org.glassfish.web:jakarta.servlet.jsp.jstl"
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'com.google.firebase:firebase-admin:9.2.0'
	
	// https://mvnrepository.com/artifact/org.modelmapper/modelmapper
	implementation("org.modelmapper:modelmapper:2.4.4")	
	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.4'

	//쿼리DSL 추가
	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	
	// https://mvnrepository.com/artifact/com.auth0/java-jwt
	implementation("com.auth0:java-jwt:3.19.2")	
	
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-client
	implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
	
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	implementation 'io.jsonwebtoken:jjwt:0.9.1'


	implementation 'com.google.firebase:firebase-admin:9.2.0'
	
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-oauth2-client
	implementation("org.springframework.boot:spring-boot-starter-oauth2-client")	
    implementation 'com.google.firebase:firebase-admin:9.2.0'           // Google Firebase Admin	
	
	//implementation("com.tosspayments:toss-payments-server-sdk:1.14.0")
}

tasks.named('bootBuildImage') {
	builder = 'paketobuildpacks/builder-jammy-base:latest'
}

tasks.named('test') {
	useJUnitPlatform()
}

//쿼리DSL 추가 빌드시작
def querydslDir = "$buildDir/generated/querydsl"
querydsl {
	jpa = true
	querydslSourcesDir = querydslDir
}

sourceSets {
	main.java.srcDir querydslDir
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	querydsl.extendsFrom compileClasspath
}

compileQuerydsl {
	options.annotationProcessorPath = configurations.querydsl
}
//쿼리DSL 추가 빌드끝
